[gd_scene load_steps=8 format=3 uid="uid://csb2yi1ofxq81"]

[ext_resource type="Script" path="res://scenes/enemies/base_entitys/Base_Enemy.gd" id="1_df8ng"]
[ext_resource type="Script" path="res://scenes/components/health/health_component.gd" id="2_xpebc"]
[ext_resource type="Script" path="res://scenes/components/damage/damage_component.gd" id="3_v1qjm"]
[ext_resource type="Script" path="res://scenes/components/movement/movement_component.gd" id="4_ghwme"]
[ext_resource type="Script" path="res://scenes/components/animation/animtation_component.gd" id="5_pe7lp"]
[ext_resource type="PackedScene" uid="uid://crjctvja1x4ew" path="res://scenes/components/hit_box/hit_box_enemy_comp.tscn" id="6_frbpc"]
[ext_resource type="Script" path="res://scenes/components/gravity/gravity_component.gd" id="6_ow3gw"]

[node name="Base_Enemy" type="CharacterBody2D" node_paths=PackedStringArray("grav_comp", "health_comp", "damage_comp", "move_comp", "anim_comp")]
collision_layer = 4
script = ExtResource("1_df8ng")
grav_comp = NodePath("GravityComponent")
health_comp = NodePath("HealthComponent")
damage_comp = NodePath("DamageComponent")
move_comp = NodePath("MovementComponent")
anim_comp = NodePath("AnimationComponent")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_xpebc")
_max_health = 50.0

[node name="DamageComponent" type="Node" parent="." node_paths=PackedStringArray("cooldown_timer")]
script = ExtResource("3_v1qjm")
_damage_amount = 5.0
cooldown_timer = NodePath("CooldownTimer")

[node name="CooldownTimer" type="Timer" parent="DamageComponent"]
wait_time = 1.5
one_shot = true

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4_ghwme")

[node name="AnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_pe7lp")
sprite = NodePath("../Sprite2D")

[node name="GravityComponent" type="Node" parent="."]
script = ExtResource("6_ow3gw")

[node name="Sprite2D" type="Sprite2D" parent="."]
hframes = 10

[node name="HitBox" parent="." node_paths=PackedStringArray("enemy") instance=ExtResource("6_frbpc")]
enemy = NodePath("..")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
